--- a/blog/views/compose.ejs
+++ b/blog/views/compose.ejs
@@ -1,7 +1,18 @@
 <%- include partial/header.ejs %>
 
 <h1>Compose </h1>
-<input name="message" placeholder="compose your blog" value="">
-<button>publish</button>
+<form action="/compose" method="POST">
+    <div class="form-group">
+        <label>Title</label>
+        <input type="text" name="title" class="form-control"  placeholder="Title">
+    </div>
+<div class="form-group">
+    <label >Post</label>
+    <textarea class="form-control" name="post" rows="3"></textarea>
+    <button class="btn btn-primary" type="submit" >Publish</button>
+</div>
+</form>
+
+
 
 <%- include partial/footer.ejs %>
