--- a/blog/views/home.ejs
+++ b/blog/views/home.ejs
@@ -1,5 +1,9 @@
 <%- include partial/header.ejs %>
 <h1>Home</h1>
 <p><% startingContent %></p>
+<% for (i = 0; i < blogPost.length; i++){ %>
+    <p><%= console.log(blogPost[i].title) %></p>
+
+<% } %>
 
 <%- include partial/footer.ejs %>
