load posts to the home page

--- a/blog/views/about.ejs
+++ b/blog/views/about.ejs
@@ -1,5 +1,5 @@
 <%- include partial/header.ejs %>
 <h1>About</h1>
-<p><% aboutContent %></p>
+<p><%= aboutContent %></p>
 
 <%- include partial/footer.ejs %>
