--- a/blog/views/contact.ejs
+++ b/blog/views/contact.ejs
@@ -1,5 +1,5 @@
 <%- include partial/header.ejs %>
 <h1>Contact</h1>
-<p><% contactContent %></p>
+<p><%= contactContent %></p>
 
 <%- include partial/footer.ejs %>
