--- a/blog/views/partial/footer.ejs
+++ b/blog/views/partial/footer.ejs
@@ -1,9 +1,10 @@
 
 </div>
-<div class="footer-padding"></div>
-  <div class="footer">
-    <p>Made with ❤️ by <a href="https://www.linkedin.com/in/newtonkamau/">Newton Kamau</a> </p>
-  </div>
+<div class="footer-padding">
+<div class="footer">
+  <p>Made with ❤️ by <a href="https://www.linkedin.com/in/newtonkamau/">Newton Kamau</a> </p>
+</div>
+</div>
 </div>
 </body>
 </html>
